--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Playground</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="title">
         <h1>Playground</h1>
-        <h2>Your Minimalist Productivity Board</h2>
+        <h2>Your Minimalist Productivity<b></b> Board</h2>
         <button id="info">i</button>
     </div>
 
     <div id="container">
         <button class="btn-add">
-            <img src="/assets/add_before.svg" style="height: 18vh;" />
+            <img src="./assets/add_before.svg" style="height: 18vh;" />
             <br>Add a note
         </button>
     </div>
