Information Box Fix

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="popup-content">
             <h1>Information</h1>
             <p><b>General:</b>
-                <br>• To add a note click on the 'Add a note' button
-                <br>• Delete a note by double clicking on it
-                <br>• Edit a note by single clicking on it
-                <br>• All notes are auto-saved
+                <br>• Add a note: Through 'Add a note' button
+                <br>• Delete a note: Double click the note
+                <br>• Edit a note: Single click the note
+                <br>• Save a note: All notes are auto-saved
                 <br><br><b>Keyboard Commands:</b>
                 <br>• Add a bullet list by typing <b>/b</b> and hitting enter
                 <br>• Add an ordered list by typing <b>/o</b> and hitting enter
